--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,11 +5,16 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Patitas a Casa es un proyecto dedicado a la noble misión de ayudar y difundir casos de mascotas perdidas o que buscan un hogar amoroso. Nuestro objetivo es ser el puente entre las mascotas en necesidad y personas dispuestas a brindarles un espacio seguro y lleno de cariño."/>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 
   <!--Font awesome-->
   <script src="https://kit.fontawesome.com/cf086407fe.js" crossorigin="anonymous"></script>
   
-  <title>Vite + React + TS</title>
+  <title>Patitas a Casa</title>
 </head>
 
 <body>
